Add ant zip target.

--- a/module/scripts/dialogs/metrics-dialog.html
+++ b/module/scripts/dialogs/metrics-dialog.html
@@ -1,5 +1,5 @@
 <div id="a" class="dialog-frame extraction about">
-    <div class="dialog-header">Identify Quality Problems</div>
+    <div class="dialog-header">Metrics selection</div>
     <div class="dialog-body">
         <form action="" method="post">
             <ul id="example">
