Update zip file.

--- a/module/scripts/dialogs/download.html
+++ b/module/scripts/dialogs/download.html
@@ -7,7 +7,7 @@
         </form>
     </div>
     <div class="dialog-footer">
-        <button class="button" bind="ok">Process</button>
+        <button class="button" bind="ok">Export</button>
         <button class="button" bind="close">Close</button>
     </div>
 </div>
